[package]
name = "grind75-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
lcrt = { version = "0.1.2", features = ["testing"] }

[dependencies.grind75]
path = ".."

[[bin]]
name = "two_sum"
path = "fuzz_targets/two_sum.rs"
test = false
doc = false
bench = false

[[bin]]
name = "valid_parentheses"
path = "fuzz_targets/valid_parentheses.rs"
test = false
doc = false
bench = false

[[bin]]
name = "merge_two_sorted_lists"
path = "fuzz_targets/merge_two_sorted_lists.rs"
test = false
doc = false
bench = false

[[bin]]
name = "best_time_to_buy_and_sell_stock"
path = "fuzz_targets/best_time_to_buy_and_sell_stock.rs"
test = false
doc = false
bench = false

[[bin]]
name = "valid_palindrome"
path = "fuzz_targets/valid_palindrome.rs"
test = false
doc = false
bench = false
