[package]
name = "grind75-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.grind75]
path = ".."

[[bin]]
name = "two_sum"
path = "fuzz_targets/two_sum.rs"
test = false
doc = false
bench = false

[[bin]]
name = "valid_parentheses"
path = "fuzz_targets/valid_parentheses.rs"
test = false
doc = false
bench = false

[[bin]]
name = "merge_two_sorted_lists"
path = "fuzz_targets/merge_two_sorted_lists.rs"
test = false
doc = false
bench = false

[[bin]]
name = "best_time_to_buy_and_sell_stock"
path = "fuzz_targets/best_time_to_buy_and_sell_stock.rs"
test = false
doc = false
bench = false

[[bin]]
name = "valid_palindrome"
path = "fuzz_targets/valid_palindrome.rs"
test = false
doc = false
bench = false

[[bin]]
name = "invert_binary_tree"
path = "fuzz_targets/invert_binary_tree.rs"
test = false
doc = false
bench = false

[[bin]]
name = "valid_anagram"
path = "fuzz_targets/valid_anagram.rs"
test = false
doc = false
bench = false

[[bin]]
name = "binary_search"
path = "fuzz_targets/binary_search.rs"
test = false
doc = false
bench = false

[[bin]]
name = "balanced_binary_tree"
path = "fuzz_targets/balanced_binary_tree.rs"
test = false
doc = false
bench = false

[[bin]]
name = "min_stack"
path = "fuzz_targets/min_stack.rs"
test = false
doc = false
bench = false
